examples/test/testpolicy19094.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19094
  namespace: namespace329
spec:
  podSelector:
    matchLabels:
      key34: value17
      key14: value29
      key16: value42
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key49: value45
      podSelector:
        matchLabels:
          key0: value34
          key34: value16
          key17: value20
